
2005-01-05  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Add escapeStrForLike() to t3lib_db and use it in tslib_cObj->searchWhere()

2006-01-04  Stanislas Rolland <stanislas.rolland@fructifor.ca>

	* Changes to the htmlArea RTE extension (details see local ChangeLog)

2006-01-04  Karsten Dambekalns <karsten@typo3.org>

	* Changes to the DBAL extension (details see local ChangeLog)
	* Minor fix to inline comment in class.t3lib_sqlparser.php

2006-01-04  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #2169: Import of testsite from T3D exceeds PHP maximum_execution_time
	* Fixed bug #2127: Fatal error in mod/user/ws/index.php
	* Changed behavior of alertPopups - there were still some bugs inside, it is cleaned up now.

2005-12-31  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Add alternative field name argument to tslib_pibase->pi_initPIflexForm()

2005-12-30  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #2108: Error when using hide in Frontend Editing

2005-12-29  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed bug #2100: Warning: Call-time pass-by-reference has been deprecated
	* Fixed bug #2126: Updating encryption key sets compat version to same value
	* Fixed bug #2132: Error on moving lost records
	* Fixed bug #2134: "Place as root" does not function
	* Changed version of indexed search to 2.9.0
	* Fixed bug #2117: Install-Tool: "Write to localconf.php" sets "sqlDebug" and "USdateFormat" automatically
	* Fixed a bug in quote settings in CSS styled content - table. Now it is possible to copy/paste a CSV directly.

2005-12-28  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.0beta1
	* Rised version number to 4.0beta1
	* Fixed a bug in tstemplate (path still pointing to typo3/ext/)

2005-12-28  Michael Stucki  <michael@typo3.org>

	* Changed TYPO3_CONF_VARS[SYS][fileCreateMask] from 775 to 755
	* Rised version number to 4.0-dev
	* Added "rtehtmlarea" as a system extension